# fourj

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  pyproject.toml
docs/: api.md  conf.py  index.md  theory.rst  usage.md
examples/: README.md  run_full_ft_seekpath.sh  run_lsq_two_shells.sh
src/fourj/: __init__.py  cli.py  constants.py  dashboard.py  io.py  lsq.py  mesh.py  structure.py  symmetry.py  transforms.py  visualization.py  workflow.py
